初始化前端

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,10 @@ nb-configuration.xml
 *.orig
 *.rej
 
+#/front
+/front-end/node_modules
+/front-end/.vscode
+/front-end/dist
+
 # Local environment
 .env
